cabal-version: 1.12
name:           timetravel
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/timetravel#readme>
homepage:       https://github.com/githubuser/timetravel#readme
bug-reports:    https://github.com/githubuser/timetravel/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2021 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/timetravel

library
  exposed-modules:
      Lib
  other-modules:
      Paths_timetravel
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable timetravel-exe
  main-is: Main.hs
  other-modules:
      Paths_timetravel
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers -any
    , timetravel
    , fgl
  --  , reanimate >= 1.1.3.1
  --  , diagrams
  default-language: Haskell2010

test-suite timetravel-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_timetravel
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , timetravel
  default-language: Haskell2010
