name:           timetravel
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/timetravel#readme>
homepage:       https://github.com/cdupont/timetravel#readme
bug-reports:    https://github.com/cdupont/timetravel/issues
author:         Corentin Dupont
maintainer:     corentin.dupont@gmail.com
copyright:      2021 Corentin Dupont
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/cdupont/timetravel

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.9
    , optparse-simple
    , brick >= 1.10
    , weighted-search
    , split
    , vty
    , containers
    , optics
    , optics-th
    , array
    , foldl
    , mtl
  exposed-modules:
      TimeLoop.Search
      TimeLoop.Walker
      TimeLoop.Types
  other-modules:
      Paths_timetravel
  default-language: Haskell2010

executable timetravel
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.9
    , optparse-simple
    , brick >= 1.10
    , weighted-search
    , split
    , vty
    , containers
    , optics
    , timetravel
  other-modules:
      UI
      Tile
  default-language: Haskell2010

test-suite timetravel-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base == 4.16
    , optparse-simple
    , brick >= 1.10
    , weighted-search
    , split
    , vty
    , containers
    , optics
    , timetravel
  default-language: Haskell2010
